# test-django-app

./: .dockerignore  .gitignore  docker-compose.yml  pyproject.toml  readme.md
dockerfiles/: Dockerfile_celery  Dockerfile_web
operation/: apps.py  serializers.py  tasks.py  urls.py  views.py
operation/migrations/: 0001_initial.py
operation/models/: __init__.py  account.py  base_model.py  operations.py
operation/tests/: __init__.py  test_account_transfer_tasks.py  test_views.py
operation/utils/: currency_operations.py  exceptions.py
project/: celery.py  settings.py  urls.py
